# langrustang

./: Cargo.toml  LICENSE  README.md  README_ja.md
files/: test_file.yaml
src/: format_t.rs  i18n.rs  lang_t.rs  lang_yaml.rs  lib.rs  print_t.rs  println_t.rs
src/format_t/: create_literal.rs
src/i18n/: check_yaml.rs  update_yaml.rs
src/lang_t/: create_literal.rs
