[package]
name = "langrustang"
version = "1.1.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/aq2r/langrustang"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.89", features = ["full"] }
pretty_assertions = "1.4.1"

serde = { version = "1.0.215", features = ["derive"] }
serde_yaml = "0.9.34"
