[package]
name = "langrustang"
version = "1.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aq2r/langrustang"
rust-version = "1.82.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
pretty_assertions = "1.4"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
